removed data_for_prediction_46059.csv from version control

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ NDBC_Bouy_Data/
 NDBC_Buoy_Data/
 src/data_X_y_46059_train_012918.csv
 src/data_X_y_46059_train_w_tide.csv
+data_for_prediction_46059.csv
