--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,11 @@ data_for_prediction_46059.csv
 data_for_prediction_46026.csv
 gbr_1.pkl
 gbr_2.pkl
+data_X_y_46005_train.csv
+data_X_y_46059_hrs.csv
+data_X_y_46059_24hrs.csv
+data_X_y_46059_48hrs.csv
+data_X_y_46059_72hrs.csv
+data_X_y_46059_96hrs.csv
+data_X_y_46059_120hrs.csv
+data_X_y_46059_144hrs.csv
