added git ignore files

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,11 @@ data_X_y_46059_72hr.csv
 data_X_y_46059_96hr.csv
 data_X_y_46059_120hr.csv
 data_X_y_46059_144hr.csv
+gbr_24hr.pkl
+gbr_48hr.pkl
+gbr_72hr.pkl
+gbr_96hr.pkl
+gbr_120hr.pkl
+gbr_144hr.pkl
+gbr_hr.pkl
+predictions_7days.csv
